--- a/css/main.css
+++ b/css/main.css
@@ -235,76 +235,7 @@ div.search-form
 	max-width: 700px;
 }
 
-/*--------Mdodal window---------*/
 
-.modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
-	left: 0;
-	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-
-.modal-content {
-	position: relative;
-
-	margin: auto;
-	padding: 0;
-
-	width: 30%;
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-	-webkit-animation-name: animatetop;
-	-webkit-animation-duration: 0.4s;
-	animation-name: animatetop;
-	animation-duration: 0.4s
-}
-
-
-@-webkit-keyframes animatetop {
-	from {top:-300px; opacity:0}
-	to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-	from {top:-300px; opacity:0}
-	to {top:0; opacity:1}
-}
-
-
-.close {
-	color: white;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-	color: #000;
-	text-decoration: none;
-	cursor: pointer;
-}
-
-.modal-header {
-	padding: 2px 16px;
-	background-color: #B19EE6;
-	color: white;
-}
-
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
-	padding: 2px 16px;
-	background-color: #9C27B0;
-	color: white;
-}
 
 .github{
 	width: 100px;
@@ -321,4 +252,40 @@ div.search-form
 .github a{
 	align-items: center;
 	display: inherit;
+}
+
+/*-------форма авторизации ----------*/
+
+#login-form label{
+	margin-right: 10px;
+}
+#LoginForm_rememberMe{
+	margin-right: 10px;
+}
+.buttons input{
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.08);
+	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.08);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.08);
+	color: #fff;
+	display:block;
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	padding: 8px 16px;
+	margin: 20px auto;
+	text-decoration: none;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+	-webkit-transition: background-color 0.1s linear;
+	-moz-transition: background-color 0.1s linear;
+	-o-transition: background-color 0.1s linear;
+	transition: background-color 0.1s linear;
+}
+.buttons input {
+	background-color: rgb( 43, 153, 91 );
+	border: 1px solid rgb( 33, 126, 74 );
+}
+
+.buttons input:hover {
+	background-color: rgb( 75, 183, 141 );
 }
